--- a/conf/php.ini
+++ b/conf/php.ini
@@ -1928,7 +1928,7 @@ ldap.max_links = -1
 extension=/opt/elastic/apm-agent-php/extensions/elastic_apm-20190902.so
 
 elastic_apm.server_url="https://apm.periksa.net"
-elastic_apm.service_name="print-out-superapp"
+elastic_apm.service_name="gateway bsre"
 ; elastic_apm.log_level=WARNING
 ; elastic_apm.log_level_syslog=TRACE
 elastic_apm.environment="production"
