--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,66 +1,67 @@
-version: '3.8'
+version: '3.8'  # Versi Docker Compose yang digunakan
 
 services:
-  app:
+  app:  # Service aplikasi utama
     build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: slim-app
+      context: .  # Lokasi Dockerfile berada di direktori saat ini
+      dockerfile: Dockerfile  # Nama file Dockerfile yang digunakan
+    container_name: slim-app  # Nama container agar mudah dikenali
     ports:
-      - "8989:80"
+      - "8989:80"  # Port mapping dari host ke container (host:container)
     volumes:
-      - app_data:/var/www/html
+      - app_data:/var/www/html  # Volume untuk menyimpan data aplikasi agar persistent
     depends_on:
-      - db
-    environment:
-      - DB_HOST=db
-      - DB_PORT=3306
-      - DB_NAME=slim_db
-      - DB_USER=slim_user
-      - DB_PASSWORD=slim_password
+      - db  # Dependensi ke service 'db' agar start setelah database
+    environment:  # Variabel lingkungan untuk konfigurasi aplikasi
+      - DB_HOST=db  # Host database yang akan dihubungkan
+      - DB_PORT=3306  # Port database yang digunakan
+      - DB_NAME=slim_db  # Nama database yang akan digunakan
+      - DB_USER=slim_user  # Username database
+      - DB_PASSWORD=slim_password  # Password database
+    restart: always  # Auto start container saat restart sistem
 
-  db:
-    image: mariadb:latest
-    container_name: mariadb
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: root123
-      MYSQL_DATABASE: slim_db
-      MYSQL_USER: slim_user
-      MYSQL_PASSWORD: slim_password
+  db:  # Service database menggunakan MariaDB
+    image: mariadb:latest  # Menggunakan image MariaDB versi terbaru
+    container_name: mariadb  # Nama container untuk database
+    restart: always  # Auto start container saat restart sistem
+    environment:  # Variabel lingkungan untuk konfigurasi MariaDB
+      MYSQL_ROOT_PASSWORD: root123  # Password root database
+      MYSQL_DATABASE: slim_db  # Nama database yang dibuat saat container pertama kali running
+      MYSQL_USER: slim_user  # User tambahan untuk aplikasi
+      MYSQL_PASSWORD: slim_password  # Password user tambahan
     ports:
-      - "3306:3306"
+      - "3306:3306"  # Port mapping untuk mengakses MariaDB dari host
     volumes:
-      - mariadb_data:/var/lib/mysql
+      - mariadb_data:/var/lib/mysql  # Volume untuk data database agar persistent
 
-  phpmyadmin:
-    image: phpmyadmin:latest
-    container_name: phpmyadmin
-    restart: always
+  phpmyadmin:  # Service phpMyAdmin untuk mengelola database secara visual
+    image: phpmyadmin:latest  # Menggunakan image phpMyAdmin versi terbaru
+    container_name: phpmyadmin  # Nama container untuk phpMyAdmin
+    restart: always  # Auto start container saat restart sistem
     ports:
-      - "8988:80"
-    environment:
-      PMA_HOST: db
-      PMA_PORT: 3306
+      - "8988:80"  # Port mapping untuk mengakses phpMyAdmin
+    environment:  # Variabel lingkungan untuk konfigurasi phpMyAdmin
+      PMA_HOST: db  # Host database yang terhubung dengan phpMyAdmin
+      PMA_PORT: 3306  # Port database yang digunakan oleh phpMyAdmin
     depends_on:
-      - db
+      - db  # Dependensi ke service 'db' agar start setelah database
 
-  portainer:
-    image: portainer/portainer-ce:latest
-    container_name: portainer
-    restart: always
+  portainer:  # Service Portainer untuk mengelola container Docker secara visual
+    image: portainer/portainer-ce:latest  # Menggunakan image Portainer Community Edition versi terbaru
+    container_name: portainer  # Nama container untuk Portainer
+    restart: always  # Auto start container saat restart sistem
     ports:
-      - "9000:9000"
+      - "9000:9000"  # Port mapping untuk mengakses Portainer dashboard
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - portainer_data:/data
+      - /var/run/docker.sock:/var/run/docker.sock  # Memberikan akses ke Docker host
+      - portainer_data:/data  # Volume untuk menyimpan data konfigurasi Portainer
     environment:
-      - ADMIN_PASSWORD=admin123
+      - ADMIN_PASSWORD=admin123  # Password default untuk login Portainer
 
 volumes:
   mariadb_data:
-    driver: local
+    driver: local  # Volume lokal untuk menyimpan data database
   app_data:
-    driver: local
+    driver: local  # Volume lokal untuk menyimpan data aplikasi
   portainer_data:
-    driver: local
+    driver: local  # Volume lokal untuk menyimpan konfigurasi Portainer
