--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,10 +16,9 @@ services:
       - DB_CONNECTION=mysql
       - DB_HOST=db  # Host database yang akan dihubungkan
       - DB_PORT=3306  # Port database yang digunakan
-      - DB_NAME=slim_db  # Nama database yang akan digunakan
-      - DB_USER=slim_user  # Username database
+      - DB_USERNAME=slim_user  # Username database
       - DB_PASSWORD=slim_password  # Password database
-      - DB_DATABASE=dbperiksa_esign
+      - DB_DATABASE=slim_db # Nama database yang akan digunakan
     restart: always  # Auto start container saat restart sistem
 
   db:  # Service database menggunakan MariaDB
