--- a/conf/php.ini
+++ b/conf/php.ini
@@ -900,10 +900,10 @@ default_socket_timeout = 60
 ;extension=php_pgsql.so
 ;extension=php_shmop.dll
 
-extension=pdo_pgsql.so
-extension=pgsql.so
-extension=pdo_mysql.so
-extension=mysqli.so
+; extension=pdo_pgsql.so
+; extension=pgsql.so
+; extension=pdo_mysql.so
+; extension=mysqli.so
 
 ; The MIBS data available in the PHP distribution must be installed.
 ; See http://www.php.net/manual/en/snmp.installation.php
@@ -1925,7 +1925,7 @@ ldap.max_links = -1
 ; tab-width: 4
 ; End:
 ; extension=elastic_apm.so
-extension=/opt/elastic/apm-agent-php/extensions/elastic_apm-20190902.so
+; extension=/opt/elastic/apm-agent-php/extensions/elastic_apm-20190902.so
 
 elastic_apm.server_url="https://apm.periksa.net"
 elastic_apm.service_name="gateway bsre"
